# categories

./: README.md  categories.cabal
.stack-work/install/6c953ab2/flag-cache/: StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  base-orphans-0.6-AbJ3lKVXygDCG0eeQEv8Iu  bifunctors-5.4.2-5j5AtkN8t5O1W8mEe1pi0q  cabal-doctest-1.0.2-7qDWi4QMBieCUnNAxkUwxe  categories-0.1.0.0-GjjdZ4skuy04tpHeBwUMgz  comonad-5.0.1-2dOTQljdUSmGwatNHkYwW3  contravariant-1.4-29zF0Im431177ovfbHYCGv  distributive-0.5.2-KlkgfUmuqy3Z181VSjKfJ  profunctors-5.2-7ONvCmXw8M9Co9mYrudYx  semigroups-0.18.3-5xL9BgkWQsCGwo6YahyMCM  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  tagged-0.8.5-1mTloBSoUxv8dqUr8XBGBt  transformers-compat-0.5.1.4-IuFogs8HAVUJBWVNMhtssu  void-0.7.2-4PWwLjXxAER9U3zGpDhf6e
.stack-work/install/6c953ab2/lib/x86_64-windows-ghc-8.0.2/categories-0.1.0.0-GjjdZ4skuy04tpHeBwUMgz/: C01.hi  Lib.hi
app/: Main.hs
src/: c01.hs  c02.hs  c03.hs  c04.hs  c08.hs
